--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -13,10 +13,12 @@ jobs:
         uses: actions/setup-python@v1
         with:
           python-version: 3.7
+      - name: Install Cython and numpy
+        run: python3 -m pip install --user cython numpy
       - name: Install wheel
         run: python3 -m pip install --user --upgrade setuptools wheel
       - name: Build a binary wheel and a source tarball
-        run: python3 setup.py sdist bdist_wheel
+        run: python3 setup.py sdist
       - name: Publish distribution to PyPI
         if: startsWith(github.ref, 'refs/tags')
         uses: pypa/gh-action-pypi-publish@master
