Pushed requirements to Python>=3.9 and astropy>=5.0, closes #55

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,9 +11,9 @@ script = "build.py"
 generate-setup-file = false
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = ">=3.9,<3.11"
+astropy = "^5.0"
 numpy = "^1.21"
-astropy = "^4.2"
 
 [tool.poetry.dev-dependencies]
 
