--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,3 +20,7 @@ numpy = "^1.21"
 [build-system]
 requires = ["poetry-core>=1.0.0", "Cython>=0.29.0", "numpy>=1.21.0", "setuptools"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.black]
+line-length = 120
+target-version = ['py39']
