--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ black = "^21.12b0"
 pre-commit = "^2.16.0"
 sphinx-rtd-theme = "^1.0.0"
 Sphinx = "^4.4.0"
+Cython = "^0.29.26"
 
 [build-system]
 requires = ["poetry-core>=1.0.0", "Cython>=0.29.0", "numpy>=1.21.0", "setuptools"]
