--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ generate-setup-file = false
 python = ">=3.9,<3.11"
 astropy = "^5.0"
 numpy = "^1.21"
-pyobs-core = "^0.16.1"
+pyobs-core = ">=0.16.0"
 
 [tool.poetry.dev-dependencies]
 black = "^21.12b0"
